<resources>
    <!-- Movie list -->
    <string name="app_name">Popular Movies App</string>
    <string name="order_by_most_popular">Most Popular</string>
    <string name="order_by_highest_rated">Highest Rated</string>
    <string name="order_by_favorite_movies">Favorite Movies</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_video">Movie Video</string>
    <string name="movie_poster_thumbnail">Movie Poster Thumbnail</string>
    <string name="app_current_page">Current Page</string>


    <!-- Movie Details -->
    <string name="movie_release_label">Released on: </string>
    <string name="movie_vote_average_label">User Rating: </string>
    <string name="movie_videos_label">Trailers:</string>
    <string name="movie_reviews_label">Reviews:</string>
    <string name="videos_play">Play</string>
    <string name="movie_detail_description">Movie Details</string>

    <!--Movie Details Mockup-->
    <string name="mockup_movie_title">Title</string>
    <string name="mockup_movie_release">11/10/2016</string>
    <string name="mockup_movie_rate">10</string>
    <string name="mockup_movie_overview">blah blah blah blah blah</string>
    <string name="mockup_movie_review">blah blah blah blah bl</string>
    <string name="mockup_movie_review_author">author</string>
    <string name="mockup_movie_play_trailer">author</string>
    <string name="mockup_movie_trailer">Trailer 1</string>
    <string name="mockup_movie_add_favorite">Add to Favorite</string>

    <!--Messages and Pages Title-->
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="no_favorite_movies">You have no favorite movies! \n Tap the star button  \n in movie details to save yours</string>
    <string name="no_internet_connection">Unable to load the movie list! \n Please connect to internet \n to get the movie list</string>

</resources>
